Fix landing jump on load, show footer when no landing, jump to hash pos on resize

--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -109,8 +109,11 @@ ul
     color #e55952
     text-decoration underline
 
-.preload > *
-    transition none !important
+.preload
+    *
+    :before
+    :after
+        transition none !important
 
 .mail:after
     content attr(data-user) "@futuresymphony.lt"
